--- a/kfdef/gcp/ci-create-cluster.yaml
+++ b/kfdef/gcp/ci-create-cluster.yaml
@@ -55,9 +55,9 @@ spec:
       - name: zone
         value: us-west1-a
       - name: configPath
-        value: "https://raw.githubusercontent.com/kkasravi/manifests/e2e-pipelineruns/kfdef/gcp/ci-cluster.yaml"
+        value: "https://raw.githubusercontent.com/kkasravi/kfctl-config-files/master/kfdef/gcp/ci-cluster.yaml"
       - name: email
-        value: kfctl-e2e@constant-cubist-173123.iam.gserviceaccount.com
+        value: kfctl-ci@constant-cubist-173123.iam.gserviceaccount.com
       - name: platform
         value: all
       repoRef:
