--- a/kfdef/ci-create-cluster.yaml
+++ b/kfdef/ci-create-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: kfdef.apps.kubeflow.org/v1alpha1
 kind: KfDef
 metadata:
-  name: kubeflow_app
+  name: ci-create-cluster
   namespace: kubeflow-ci
 spec:
   repos:
