--- a/kfdef/ci-setup-pipeline-run.yaml
+++ b/kfdef/ci-setup-pipeline-run.yaml
@@ -7,17 +7,19 @@ spec:
   repos:
   - name: manifests
     root: 
-    uri: https://github.com/kubeflow/manifests/archive/pull/328/head.tar.gz
+    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
   - name: kubeflow
     root: kubeflow-master
     uri: https://github.com/kubeflow/kubeflow/archive/master.tar.gz
   applications:
   - kustomizeConfig:
+      repoRef:
+        name: manifests
+        path: application/application-crds
+    name: application-crds
+  - kustomizeConfig:
       overlays:
       - application
-      parameters:
-      - name: generateName
-        value: kubeflow-
       repoRef:
         name: manifests
         path: application/application
