--- a/kfdef/gcp/ci-cluster.yaml
+++ b/kfdef/gcp/ci-cluster.yaml
@@ -21,6 +21,11 @@ spec:
         path: istio/istio-crds
     name: istio-crds
   - kustomizeConfig:
+      repoRef:
+        name: manifests
+        path: application/application-crds
+    name: application-crds
+  - kustomizeConfig:
       overlays:
       - application
       parameters:
