--- a/kfdef/ci-centraldashboard-pipeline-run.yaml
+++ b/kfdef/ci-centraldashboard-pipeline-run.yaml
@@ -55,7 +55,7 @@ spec:
       - name: image_url
         value: "gcr.io/constant-cubist-173123/centraldashboard"
       - name: kubeflow_repo_revision
-        value: pull/4091/head
+        value: refs/pull/4091/head
       - name: kubeflow_repo_url
         value: git@github.com:kubeflow/kubeflow.git
       - name: pvc_mount_path
