add notebook back in

--- a/kfdef/gcp/ci-cluster.yaml
+++ b/kfdef/gcp/ci-cluster.yaml
@@ -67,6 +67,19 @@ spec:
   - kustomizeConfig:
       overlays:
       - istio
+      - application
+      parameters:
+      - name: injectGcpCredentials
+        value: "true"
+      - name: generateName
+        value: notebook-controller-
+      repoRef:
+        name: manifests
+        path: jupyter/notebook-controller
+    name: notebook-controller
+  - kustomizeConfig:
+      overlays:
+      - istio
       repoRef:
         name: manifests
         path: tensorboard
