add generateName to jupyter-web-app

--- a/kfdef/gcp/ci-cluster.yaml
+++ b/kfdef/gcp/ci-cluster.yaml
@@ -98,6 +98,9 @@ spec:
       overlays:
       - istio
       - application
+      parameters:
+      - name: generateName
+        value: jupyter-web-app-
       repoRef:
         name: manifests
         path: jupyter/jupyter-web-app
