--- a/kfdef/ci-setup-pipeline-run.yaml
+++ b/kfdef/ci-setup-pipeline-run.yaml
@@ -7,7 +7,7 @@ spec:
   repos:
   - name: manifests
     root: 
-    uri: https://github.com/kkasravi/manifests/tree/e2e-pipelineruns
+    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
   - name: kubeflow
     root: kubeflow-master
     uri: https://github.com/kubeflow/kubeflow/archive/master.tar.gz
