--- a/kfdef/ci-setup-pipeline-run.yaml
+++ b/kfdef/ci-setup-pipeline-run.yaml
@@ -7,7 +7,8 @@ spec:
   repos:
   - name: manifests
     root: 
-    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
+#    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
+    uri: https://github.com/kubeflow/manifests/archive/pull/328/head.tar.gz
   - name: kubeflow
     root: kubeflow-master
     uri: https://github.com/kubeflow/kubeflow/archive/master.tar.gz
