--- a/kfdef/ci-run-model-skx-pipeline-run.yaml
+++ b/kfdef/ci-run-model-skx-pipeline-run.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   repos:
   - name: manifests
-    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
+#    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
+    uri: https://github.com/kubeflow/manifests/archive/pull/328/head.tar.gz
   applications:
   - kustomizeConfig:
       overlays:
