--- a/kfdef/gcp/ci-cluster-all.yaml
+++ b/kfdef/gcp/ci-cluster-all.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   repos:
   - name: manifests
-    uri: https://github.com/kubeflow/manifests/archive/pull/342/head.tar.gz
+    uri: https://github.com/kubeflow/manifests/archive/pull/409/head.tar.gz
     # To get manifest at a PR:
     #uri: https://github.com/kubeflow/manifests/archive/pull/235/head.tar.gz
   appdir: /tmp/myapp2
@@ -445,6 +445,7 @@ spec:
   # If its not set kfctl generate will try to set it automatically based on the default
   # gcloud config
   # email: <your_email@gmail.com>
+  email: kfctl-ci@constant-cubist-173123.iam.gserviceaccount.com
   enableApplications: true
   packageManager: kustomize
   platform: gcp
@@ -464,4 +465,4 @@ spec:
   # Project should be set to the GCP project you want to use.
   # If you run kfctl init --config=<path>/kfctl_gcp_iap.yaml
   # kfctl will try to automatically set it.
-  # project: <your project>
+  project: constant-cubist-173123
