--- a/tektoncd-install/overlays/application/kustomization.yaml
+++ b/tektoncd-install/overlays/application/kustomization.yaml
@@ -5,9 +5,9 @@ bases:
 resources:
 - application.yaml
 commonLabels:
-  app.kubernetes.io/name: tkp-pipeline-run
-  app.kubernetes.io/instance: tkp-pipeline-run-v0.7.1
+  app.kubernetes.io/name: tektoncd-install
+  app.kubernetes.io/instance: tektoncd-install-v0.7.1
   app.kubernetes.io/managed-by: kfctl
-  app.kubernetes.io/component: tkp-pipeline-run
+  app.kubernetes.io/component: tektoncd-install
   app.kubernetes.io/part-of: kubeflow
   app.kubernetes.io/version: v0.7.1
