--- a/tkp/tkp-pipeline-run/overlays/application/application.yaml
+++ b/tkp/tkp-pipeline-run/overlays/application/application.yaml
@@ -1,11 +1,16 @@
 apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
-  name: $(generateName)
+  name: tkp-pipeline-run
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/instance: $(generateName)
+      app.kubernetes.io/name: tkp-pipeline-run
+      app.kubernetes.io/instance: tkp-pipeline-run-v0.7.1
+      app.kubernetes.io/managed-by: kfctl
+      app.kubernetes.io/component: tkp-pipeline-run
+      app.kubernetes.io/part-of: kubeflow
+      app.kubernetes.io/version: v0.7.1
   componentKinds:
     - group: tekton.dev
       kind: PipelineRun
