--- a/tkp/tkp-pipeline/overlays/run-model-task/task.yaml
+++ b/tkp/tkp-pipeline/overlays/run-model-task/task.yaml
@@ -13,7 +13,7 @@ spec:
     image: $(inputs.params.imageName)
     #command: ["/bin/bash", "/run-model/run-model.sh"]
     command: ["/bin/sleep", "infinity"]
-    workingDir: /kubeflow
+    #workingDir: /kubeflow
     volumeMounts:
     - name: run-model
       mountPath: /run-model
