--- a/tkp/tkp-pipeline-run/base/kustomization.yaml
+++ b/tkp/tkp-pipeline-run/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
 - persistent-volume-claim.yaml
 - service-account.yaml
-- secrets.yaml
+#- secrets.yaml
 - cluster-role-binding.yaml
 - pipeline-run.yaml
 namespace: $(namespace)
