--- a/tkp/tkp-pipeline-run/base/service-account.yaml
+++ b/tkp/tkp-pipeline-run/base/service-account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tkp-pipeline-run-service-account
-imagePullSecrets:
-- name: docker-secret
-secrets:
-- name: github-ssh
+#imagePullSecrets:
+#- name: docker-secret
+#secrets:
+#- name: github-ssh
