--- a/tkp/tkp-pipeline/overlays/run-model-task/task.yaml
+++ b/tkp/tkp-pipeline/overlays/run-model-task/task.yaml
@@ -11,9 +11,9 @@ spec:
   steps:
   - name: run-model
     image: $(inputs.params.imageName)
-    #command: ["/bin/bash", "/run-model/run-model.sh"]
-    command: ["/bin/sleep", "infinity"]
-    #workingDir: /kubeflow
+    command: ["/bin/bash", "/run-model/run-model.sh"]
+    #command: ["/bin/sleep", "infinity"]
+    workingDir: /kubeflow
     volumeMounts:
     - name: run-model
       mountPath: /run-model
