add back in the secrets

--- a/tk/tk-pipelines/base/service-account.yaml
+++ b/tk/tk-pipelines/base/service-account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tk-pipelines-service-account
-#imagePullSecrets:
-#- name: docker-secret
-#secrets:
-#- name: github-ssh
+imagePullSecrets:
+- name: docker-secret
+secrets:
+- name: github-ssh
