--- a/kfdef/ci-profile-controller-pipeline-run.yaml
+++ b/kfdef/ci-profile-controller-pipeline-run.yaml
@@ -1,55 +1,23 @@
-apiVersion: kfdef.apps.kubeflow.org/v1alpha1
+apiVersion: kfdef.apps.kubeflow.org/v1beta1
 kind: KfDef
 metadata:
   name: ci-profile-controller-pipeline-run
   namespace: kubeflow-ci
 spec:
-  repos:
-  - name: manifests
-    root: 
-    uri: /Users/kdkasrav/go/src/github.com/kubeflow/manifests
-  - name: kubeflow
-    root: kubeflow-master
-    uri: https://github.com/kubeflow/kubeflow/archive/master.tar.gz
   applications:
-  - kustomizeConfig:
-      overlays:
-      - build-push-task
-      - update-manifests-task
-      parameters:
-      - name: pipeline
-        value: ci-pipeline
-      - name: image_name
-        value: profile-controller
-      - name: docker_target
-        value: serve
-      - name: path_to_context
-        value: components/profile-controller
-      - name: path_to_docker_file
-        value: components/profile-controller/Dockerfile
-      - name: path_to_manifests_kustomization_file
-        value: profiles
-      - name: path_to_manifests_dir
-        value: profiles/base
-      - name: container_image
-        value: "gcr.io/constant-cubist-173123/test-worker:v20190919-73d5f44-e3b0c4"
-      repoRef:
-        name: manifests
-        path: ci/ci-pipeline
-    name: ci-pipeline
   - kustomizeConfig:
       overlays:
       - application
       - kubeflow-repo-resource
       - manifests-repo-resource
       - image-resource
+      - build-push-task
+      - update-manifests-task
       parameters:
       - name: namespace
         value: kubeflow-ci
       - name: generateName
         value: ci-profile-controller-pipeline-run-
-      - name: pipeline
-        value: ci-pipeline
       - name: image_name
         value: profile-controller
       - name: image_url
@@ -64,13 +32,23 @@ spec:
         value: git@github.com:kubeflow/manifests.git
       - name: pvc_mount_path
         value: /kubeflow
+      - name: docker_target
+        value: serve
+      - name: path_to_context
+        value: components/profile-controller
+      - name: path_to_docker_file
+        value: components/profile-controller/Dockerfile
+      - name: path_to_manifests_kustomization_file
+        value: profiles
+      - name: path_to_manifests_dir
+        value: profiles/base
+      - name: container_image
+        value: "gcr.io/constant-cubist-173123/test-worker:v20190919-73d5f44-e3b0c4"
       repoRef:
         name: manifests
-        path: ci/ci-pipeline-run
-    name: ci-pipeline-run
-  enableApplications: true
-  packageManager: kustomize
-  skipInitProject: true
-  useBasicAuth: false
-  useIstio: false
+        path: tk/tk-pipelines
+    name: tk-pipelines
+  repos:
+  - name: manifests
+    uri: /Users/kdkasrav/Github/kfctl-config-files
   version: master
